--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,30 +19,28 @@
         <TextView
             android:id="@+id/tv_count"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="0dp"
             android:gravity="center"
             android:text='@{count.toString()}'
             android:textColor="@color/white"
-            android:textSize="130dp"
+            android:textSize="150dp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/button_plus"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.2"
             tools:text="0" />
 
         <Button
             android:id="@+id/button_plus"
             android:layout_width="350dp"
             android:layout_height="200dp"
-            android:layout_marginTop="25dp"
             android:text="+"
             android:backgroundTint="@color/green"
             android:textSize="75dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_count" />
+            app:layout_constraintBottom_toTopOf="@id/button_minus" />
 
         <Button
             android:id="@+id/button_minus"
@@ -53,9 +51,9 @@
             android:text="-"
             android:backgroundTint="@color/green"
             android:textSize="37dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/button_plus" />
+            app:layout_constraintStart_toStartOf="parent"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
