--- a/app/src/main/res/layout/activity_menu_setting.xml
+++ b/app/src/main/res/layout/activity_menu_setting.xml
@@ -38,7 +38,7 @@
             android:layout_weight="1"
             android:gravity="end"
             android:layout_marginEnd="20sp"
-            android:text="0"
+            tools:text="0"
             android:textColor="@color/white"
             android:textSize="30sp" />
     </LinearLayout>
